# handwritten-expression-engine

./: .gitignore  GETTING_STARTED.md  README.md  main.py  maths_req.md  pyproject.toml
api/: __init__.py  server.py
app/: __init__.py  logger.py  main.py  pipeline.py
artifacts/phase3/: per_class_accuracy.txt
artifacts/phase4/: baseline_failure_summary.txt  baseline_per_class_accuracy.txt  baseline_top_confusions.txt  robust_failure_summary.txt  robust_per_class_accuracy.txt  robust_top_confusions.txt
artifacts/phase5/: predictions.csv  predictions.txt
artifacts/runs/: 20260428_120012_850480.json  (+3 more)
docs/: ARCHITECTURE.md  INTERVIEW_GUIDE.md  TECHNICAL_DEEP_DIVE.md  currentfolderstructure.md  phases.md
metrics/: baseline_dense.csv  baseline_failure_analysis.csv  cnn_mnist.csv  cnn_robust.csv  operator_cnn.csv  robust_failure_analysis.csv  threshold_evaluation.csv
models/: __init__.py  baseline_dense.py  cnn_mnist.py
notebooks/: 01_mnist_exploration.ipynb
parser/: __init__.py  expression_parser.py
preprocessing/: __init__.py  image_utils.py
recognition/: __init__.py  digit_recognizer.py  grouping.py  operator_dataset.py  operator_recognizer.py
scripts/: __init__.py  analyze_cnn.py  analyze_failures.py  debug_operator_dataset.py  debug_preprocessing.py  debug_segmentation.py  evaluate_thresholds.py  test_preprocessing.py  train_baseline.py  train_cnn.py  train_cnn_robust.py  train_operator_cnn.py
tests/: test_expression_parser.py  test_image_utils.py  test_recognition.py  test_segmentation.py
vision/: __init__.py  segmentation.py
(+14 files in other folders)
