[project]
name = "calcinator"
version = "0.1.0"
description = "Handwritten arithmetic expression calculator — image in, answer out."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
